SeniorProj/Client/Shared/NavMenu.razor.css
nav {
    margin: 0;
    padding-left: 8px;
    padding-right: 8px;
    background: white;
    font-family: sans-serif;
    margin-bottom: 25px;
}

.navbar ul{
    list-style: none;
    background: #38B2E3;
    padding: 0;
    margin: 0;
    border-radius: 3px;
    text-align: center;
    z-index: 999;
}

.navbar li{
    display: inline-block;

}

.navbar a{
    text-decoration: none;
    color: white;
    width: 150px;
    display: block;
    padding: 25px 25px;
    font-size: 15px;
    text-transform: uppercase;
    font-weight: bold;
    text-align: center;
}

.navbar a:hover{
    background-color: #3DC2F7;
    border-radius: 5px;

}

.bars{
 width: 35px;
 height: 5px;
 background-color: white; /* collapse expand button */
 margin: 5px 0;
}


.checkbtn{
  font-size: 30px;
  color: white;
  float: left;
  line-height: 90px;
  margin-right: 20px;
  cursor: pointer;
  display: none;
  margin-top: 25px;
}
#check{   /*make checkbox invis will be ontop of button to select when clicked*/
  display: none;
}
@media (max-width: 952px){

  nav ul li a{
    font-size: 16px;
  }
}
@media (max-width: 858px){
  .checkbtn{
    display: block;
  }

*{
  padding: 0;
  margin: 0;
  text-decoration: none;
  list-style: none;
  box-sizing: border-box;
}

nav{
  background: #3DC2F7;
  height: 81px;
  width: 100%;
  margin: 0 0;
    margin-bottom: 25px;
}
  .navbar ul{                  /* ul, li, a will move to expanded area onclick*/
    position: fixed;
    width: 100%;
    height: 100%;
    background: #2c3e50;
    top: 155px;
    left: -100%;
    text-align: center;
    transition: all .5s;
  }
  .navbar ul li{
    display: block;
    margin: 10% 0;
    line-height: 30px;
    text-align: center;
  }
  .navbar ul li a{
    font-size: 20px;
    text-align: center;
    margin: auto;
    white-space: nowrap;
    
  }
  .navbar a:hover{
    background: none;
    color: #3DC2F7;
  }
  #check:checked ~ ul{
    left: 0;
  }
}

